--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,7 +8,7 @@
     max-width: 720px;
 }
 
-@media screen and (max-width: 320) {
+@media screen and (max-width: 320px) {
     .lead__subtitle{
         font-weight: 400;
         font-size: 16px;
