--- a/blocks/lead/__titile/lead__title.css
+++ b/blocks/lead/__titile/lead__title.css
@@ -8,7 +8,7 @@
     max-width: 720px;
 }
 
-@media screen and (max-width: 320) {
+@media screen and (max-width: 320px) {
     .lead__title{
         font-weight: 900;
         font-size: 40px;
