--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,8 +4,14 @@
     margin: 48px auto 0 auto;
 }
 
-@media screen and (max-width: 12804) {
+@media screen and (max-width: 1280px) {
     .lead{
         margin: 56px auto 0 auto;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead{
+        width: 320px;
     }
 }
