--- a/blocks/lead/__titile/lead__title.css
+++ b/blocks/lead/__titile/lead__title.css
@@ -6,6 +6,8 @@
     margin: auto;
     color: #FFFFFF;
     max-width: 720px;
+    word-wrap: break-word;
+    text-align: center;
 }
 
 @media screen and (max-width: 320px) {
@@ -16,6 +18,6 @@
         text-align: center;
         margin: auto;
         color: #FFFFFF;
-        max-width: 288px;
+        max-width: 100%;
     }
 }
