--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,17 +1,26 @@
 .lead{
     display: flex;
     flex-direction: column;
-    margin: 48px auto 0 auto;
+    margin: 56px 148px 0 148px;
+    max-width: 984px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
     .lead{
-        margin: 56px auto 0 auto;
+        margin: 48px 48px 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead{
+        margin: 48px 0 0 0;
+        width: 100%;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead{
-        width: 320px;
+        margin: 48px 0 0 0;
+        width: 100%;
     }
 }
