--- a/pages/index.css
+++ b/pages/index.css
@@ -5,9 +5,30 @@
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/header/__lang-links/__lang-links.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
-@import url("../blocks/header/__lang-link/_unstressed/header__lang-link_unstressed");
+@import url("../blocks/header/__lang-link/_unstressed/header__lang-link_unstressed.css");
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/lead/__titile/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
 @import url("../blocks/lead/__image/lead__image.css");
 @import url("../blocks/lead/__caption/lead__caption.css");
+@import url("../blocks/intro/intro.css");
+@import url("../blocks/intro/__title/intro__title.css");
+@import url("../blocks/intro/__text/intro__text.css");
+@import url("../blocks/intro/__list/intro__list.css");
+@import url("../blocks/photo-grid/photo-grid.css");
+@import url("../blocks/photo-grid/__item/photo-grid__item.css");
+@import url("../blocks/places/places.css");
+@import url("../blocks/places/__place/places__place.css");
+@import url("../blocks/places/__place/__image/places__place__image.css");
+@import url("../blocks/places/__place/__paragraph/places__place__paragraph.css");
+@import url("../blocks/places/__place/__title/places__place__title.css");
+@import url("../blocks/places/__place/__website/places__place__website.css");
+@import url("../blocks/places/__place/__website-link/places__place__website-link.css");
+@import url("../blocks/places/__place/__website-url-heading/places__place-url-heading.css");
+@import url("../blocks/cover/cover.css");
+@import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/cover/__subtitle/cover__subtitle.css");
+@import url("../blocks/cover/__image/cover__image.css");
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__copyright/footer__copyright.css");
+@import url("../blocks/footer/__link/footer__link.css");
