--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,4 @@
-.places__place__title{
+.place__title{
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -8,14 +8,14 @@
 }
 
 @media screen and (max-width: 768px) {
-    .places__place__title{
+    .place__title{
         font-size: 42px;
         line-height: 46px;
     }
 }
 
 @media screen and (max-width: 320px) {
-    .places__place__title{
+    .place__title{
         font-size: 32px;
         line-height: 35px;
     }
