--- a/pages/index.css
+++ b/pages/index.css
@@ -18,13 +18,13 @@
 @import url("../blocks/photo-grid/photo-grid.css");
 @import url("../blocks/photo-grid/__item/photo-grid__item.css");
 @import url("../blocks/places/places.css");
-@import url("../blocks/places/__place/places__place.css");
-@import url("../blocks/places/__place/__image/places__place__image.css");
-@import url("../blocks/places/__place/__paragraph/places__place__paragraph.css");
-@import url("../blocks/places/__place/__title/places__place__title.css");
-@import url("../blocks/places/__place/__website/places__place__website.css");
-@import url("../blocks/places/__place/__website-link/places__place__website-link.css");
-@import url("../blocks/places/__place/__website-url-heading/places__place-url-heading.css");
+@import url("../blocks/place/place.css");
+@import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__paragraph/place__paragraph.css");
+@import url("../blocks/place/__title/place__title.css");
+@import url("../blocks/place/__website/place__website.css");
+@import url("../blocks/place/__website-link/place__website-link.css");
+@import url("../blocks/place/__website-url-heading/place__website-url-heading.css");
 @import url("../blocks/cover/cover.css");
 @import url("../blocks/cover/__title/cover__title.css");
 @import url("../blocks/cover/__subtitle/cover__subtitle.css");
