--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,4 +1,4 @@
-.places__place{
+.place{
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto repeat(2,calc(460px/2));
@@ -9,14 +9,14 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .places__place{
+    .place{
         grid-template-rows: auto repeat(2,calc(440px/2));
         column-gap: 32px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .places__place{
+    .place{
         grid-template-columns: 40% 60%;
         grid-template-rows: auto repeat(2,calc(340px/2));
         column-gap: 28px;
@@ -25,7 +25,7 @@
 
 /* для моего телефона :) */
 @media screen and (max-width: 420px) {
-    .places__place{
+    .place{
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: auto auto 100px auto;
@@ -36,7 +36,7 @@
 }
 
 @media screen and (max-width: 320px) {
-    .places__place{
+    .place{
         display: grid;
         grid-template-columns: 100%;
         grid-template-rows: auto auto 100% auto;
