--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial', sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
