--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,11 +2,10 @@
     display: flex;
     flex-direction: column;
     margin: 92px 48px 92px 48px;
-    width: 1184px;
+    max-width: 1184px;
     height: 740px;
     justify-content: center;
     align-items: center;
-    position: relative;
 }
 
 .cover:hover{
