--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,7 @@
     margin: 92px 48px 0 48px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     column-gap: 16px;
     row-gap: 16px;
 }
@@ -10,7 +10,7 @@
 @media screen and (max-width: 1024px) {
     .photo-grid{
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
     }
 }
 
@@ -18,7 +18,7 @@
     .photo-grid{
         margin-top: 88px;
         grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 1fr);
     }
 }
 
@@ -26,6 +26,6 @@
     .photo-grid{
         margin-top: 64px;
         grid-template-columns: 1fr;
-        grid-auto-rows: repeat(12, 1fr);
+        grid-template-rows: repeat(12, 1fr);
     }
 }
