--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,7 @@
 .intro{
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 100%;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 100%;
     margin: 64px 148px 0 148px;
     max-width: 690px;
 }
