--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,6 +2,7 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
+    letter-spacing: -4px;
     color: #FFFFFF;
     margin: 0;
     padding: 0;
@@ -11,6 +12,7 @@
     .place__title{
         font-size: 42px;
         line-height: 46px;
+        letter-spacing: -4px;
     }
 }
 
@@ -18,5 +20,6 @@
     .place__title{
         font-size: 32px;
         line-height: 35px;
+        margin-left: 14px;
     }
 }
