--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,9 +10,8 @@
 }
 
 @media screen and (max-width: 320px) {
-    .cover_title{
+    .cover__title{
         font-size: 32px;
         line-height: 35px;
-        max-width: 288px;
     }
 }
