--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -16,16 +16,15 @@
 @media screen and (max-width: 1024px) {
     .cover{
         margin: 92px 0px 92px 0px;
-        width: 100%;
-        height: 640px;
+        max-width: 100%;
+        max-height: 640px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .cover{
-        margin: 88px 0px 88px 0px;
-        width: 100%;
-        height: 480px;
+        margin: 35px 0px 88px 0px;
+        max-height: 480px;
     }
 }
 
