--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,7 +11,9 @@
 
 @media screen and (max-width: 320px) {
     .footer__copyright{
-        font-size: 24px;
-        line-height: 24px;
+        font-size: 14px;
+        line-height: 64px;
+        margin-left: 0;
+        text-align: left;
     }
 }
