--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -7,3 +7,9 @@
     padding: 0;
     list-style: none;
 }
+
+@media screen and (max-width: 320px) {
+    .intro__list{
+        margin-top: 60px;
+    }
+}
