--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,3 +6,17 @@
     text-transform: uppercase;
     color: #FFFFFF;
 }
+
+@media screen and (max-width: 768px) {
+    .lead__caption{
+        margin-left: 23px;
+    }
+    
+}
+
+@media screen and (max-width: 320px) {
+    .lead__caption{
+        margin-left: 16px;
+    }
+    
+}
