--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,14 +7,14 @@
 @media screen and (max-width: 1024px) {
     .lead__image{
         margin-top: 56px;
-        max-width: 100%;
+        max-width: 928px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead__image{
         margin-top: 56px;
-        max-width: 100%;
+        max-width: 768px;
     }
 }
 
