--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,9 +3,16 @@
     font-size: 30px;
     line-height: 36px;
     text-align: center;
-    margin: 32px auto;
+    margin: 32px auto 0 auto;
     color: #FFFFFF;
-    max-width: 100%;
+    max-width: 520px;
+    width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead__title{
+        margin: 10px auto 0 auto;
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -14,7 +21,7 @@
         font-size: 16px;
         line-height: 20px;
         text-align: center;
-        margin: auto;
+        margin-top: 16px;
         color: #FFFFFF;
         max-width: 288px;
     }
