--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -16,16 +16,16 @@
 
 @media screen and (max-width: 768px) {
     .photo-grid{
-        margin-top: 88px;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 1fr);
+        margin: 88px 24px 0 24px;
+        grid-template-columns: repeat(2, 352px);
+        grid-template-rows: repeat(6, 264px);
     }
 }
 
 @media screen and (max-width: 320px) {
     .photo-grid{
-        margin-top: 64px;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(12, 1fr);
+        margin: 14px 14px 0 14px;
+        grid-template-columns: 288px;
+        grid-template-rows: repeat(12, 216px);
     }
 }
