--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,3 +7,10 @@
     padding: 0;
     margin-bottom: 26px;
 }
+
+@media screen and (max-width:768px) {
+    .place__paragraph{
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
+}
