--- a/blocks/place/__website-url-heading/place__website-url-heading.css
+++ b/blocks/place/__website-url-heading/place__website-url-heading.css
@@ -4,4 +4,12 @@
     line-height: 12px;
     letter-spacing: 2px;
     color: #AAAAAA;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 320px) {
+    .place__website-url-heading{
+        margin-left: 14px;
+    }
 }
