--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place{
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto repeat(2,calc(460px/2));
+    grid-template-columns: 460px 484px;
+    grid-template-rows: auto;
     padding: 0;
     margin: 0;
     column-gap: 40px;
@@ -10,38 +10,32 @@
 
 @media screen and (max-width: 1024px) {
     .place{
-        grid-template-rows: auto repeat(2,calc(440px/2));
+        grid-template-columns: 440px 456px;
         column-gap: 32px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place{
-        grid-template-columns: 40% 60%;
-        grid-template-rows: auto repeat(2,calc(340px/2));
-        column-gap: 28px;
+        grid-template-columns: 340px 365px;
+        column-gap: 25px;
+    }
+    .place:nth-child(1){
+        grid-template-columns: 300px 365px;
+        column-gap: 65px;
     }
 }
 
-/* для моего телефона :) */
-@media screen and (max-width: 420px) {
-    .place{
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: auto auto 100px auto;
-        padding: 0;
-        margin: 0;
-        row-gap: 32px;
-    }
-}
 
 @media screen and (max-width: 320px) {
     .place{
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: auto auto 100% auto;
-        padding: 0;
-        margin: 0;
-        row-gap: 32px;
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+    }
+    .place:nth-child(1){
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
     }
 }
