--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,24 +1,26 @@
 .places{
     display: flex;
     flex-direction: column;
-    margin: 92px 148px 0 148px;
+    margin: 100px 148px 0 148px;
     gap: 80px;
 }
 
 @media screen and (max-width: 1024px) {
     .places{
-        margin: 92px 48px 0 48px;
+        margin: 110px 48px 0 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .places{
         margin: 88px 24px 0 24px;
+        gap: 45px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .places{
-        margin: 64px 0 0 0;
+        margin: 20px 0 0 0;
+        max-width: 320px;
     }
 }
