--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,7 +13,8 @@
 
 @media screen and (max-width: 320px) {
     .footer{
-        margin: 0 0 24px 14px;
+        margin-left: 10px;
         flex-direction: column;
+        gap: 32px;
     }
 }
