--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,6 +11,7 @@
 @media screen and (max-width:768px) {
     .place__paragraph{
         font-size: 16px;
-        letter-spacing: 1px;
+        margin: 0 35px 26px 10px;
+        letter-spacing: 0.5px;
     }
 }
