--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -38,4 +38,16 @@
         flex-direction: column;
         gap: 32px;
     }
+
+    .place:nth-child(3){
+        display: flex;
+        flex-direction: column;
+        margin-top: -30px;
+    }
+
+    .place:nth-child(4){
+        display: flex;
+        flex-direction: column;
+        margin-top: -30px;
+    }
 }
