--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -31,7 +31,6 @@
 @media screen and (max-width: 320px) {
     .cover{
         margin: 16px 0px 56px 0px;
-        width: 100%;
-        height: 200px;
+        max-height: 200px;
     }
 }
