--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     margin: 0 48px 24px 48px;
     gap: 18px;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 768px) {
