--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,7 +4,7 @@
     grid-template-columns: 100%;
     margin: 80px 442px 0 148px;
     max-width: 690px;
-    width: 100%;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
