--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,14 +7,13 @@
 @media screen and (max-width: 1024px) {
     .lead__image{
         margin-top: 56px;
-        max-width: 1024px;
+        max-width: 100%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead__image{
         margin-top: 56px;
-        max-width: 768px;
     }
 }
 
@@ -22,6 +21,5 @@
 @media screen and (max-width: 320px) {
     .lead__image{
         margin-top: 40px;
-        max-width: 320px;
     }
 }
