--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,11 +5,10 @@
     margin: 0 auto;
     background: #2A2C2F;
     max-width: 1280px;
+    min-width: 320px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
   }
-
-@media screen and (max-width: 320px) {
-  .page {
-    max-width: 320px;
-  }
-
-}
