--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,12 +6,12 @@
     margin: 0;
     padding: 0;
     margin-bottom: 26px;
+    max-width: 100%;
 }
 
 @media screen and (max-width:768px) {
     .place__paragraph{
         font-size: 16px;
-        margin: 0 35px 26px 10px;
-        letter-spacing: 0.5px;
+        margin: 0 27px 26px 10px;
     }
 }
