--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,28 +1,25 @@
 .place{
     display: grid;
-    grid-template-columns: 460px 484px;
+    grid-template-columns: 460px 1fr;
     grid-template-rows: auto;
     padding: 0;
     margin: 0;
     column-gap: 40px;
     row-gap: 48px;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
     .place{
-        grid-template-columns: 440px 456px;
+        grid-template-columns: 440px 1fr;
         column-gap: 32px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place{
-        grid-template-columns: 340px 365px;
+        grid-template-columns: 340px 1fr;
         column-gap: 25px;
-    }
-    .place:nth-child(1){
-        grid-template-columns: 300px 365px;
-        column-gap: 65px;
     }
 }
 
@@ -33,21 +30,7 @@
         flex-direction: column;
         gap: 32px;
     }
-    .place:nth-child(1){
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-    }
-
     .place:nth-child(3){
-        display: flex;
-        flex-direction: column;
-        margin-top: -30px;
-    }
-
-    .place:nth-child(4){
-        display: flex;
-        flex-direction: column;
-        margin-top: -30px;
+        margin-top: -25px;
     }
 }
