--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 @import url("../blocks/place/__website-link/place__website-link.css");
 @import url("../blocks/place/__website-url-heading/place__website-url-heading.css");
 @import url("../blocks/cover/cover.css");
+@import url("../blocks/cover/__link/cover__link.css");
 @import url("../blocks/cover/__title/cover__title.css");
 @import url("../blocks/cover/__subtitle/cover__subtitle.css");
 @import url("../blocks/cover/__image/cover__image.css");
