--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,14 +5,13 @@
     text-align: center;
     color: #FFFFFF;
     max-width: 560px;
-    margin: 0 0 32px 0;
-    padding: 0;
+    
 }
 
 @media screen and (max-width: 320px) {
     .cover__title{
         font-size: 32px;
         line-height: 35px;
-        margin: 0 40px 15px 40px;
+        margin: 48px 40px 15px 40px;
     }
 }
