--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,7 +5,7 @@
     text-align: center;
     color: #FFFFFF;
     max-width: 360px;
-    margin: auto;
+    margin: 10px auto 0 auto;
     padding: 0;
 }
 
