--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -6,14 +6,14 @@
 
 @media screen and (max-width: 1024px) {
     .lead__image{
-        margin-top: 56px;
+        margin: 58px auto 0 auto;
         max-width: 100%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .lead__image{
-        margin-top: 56px;
+        margin: 56px 0 0 0;
     }
 }
 
