--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,14 +5,20 @@
     text-align: center;
     color: #FFFFFF;
     max-width: 360px;
-    margin: 10px auto 0 auto;
+    margin: 40px auto 0 auto;
     padding: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .cover__subtitle{
+        margin-top: 40px;
+    }
 }
 
 @media screen and (max-width: 320px) {
     .cover__subtitle{
         font-size: 14px;
         line-height: 16px;
-        margin: 0 40px 15px 40px;
+        margin: 0 26px 15px 26px;
     }
 }
