--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,10 +9,16 @@
     margin-left: auto;
 }
 
+@media screen and (max-width: 768px) {
+    .footer__copyright{
+        margin-right: 24px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .footer__copyright{
         margin-left: 0;
-        margin-top: 10px;
+        margin-top: 12px;
         text-align: left;
     }
 }
