--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,3 +14,9 @@
         font-size: 16px;
     }
 }
+
+@media screen and (max-width:320px) {
+    .place__paragraph{
+        margin: 0 16px 25px 16px;
+    }
+}
