исправление замечаний по ревью

--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,6 +4,7 @@
     line-height: 18px;
     color: #FFFFFF;
     text-decoration: none;
+    width: fit-content;
 }
 
 @media screen and (max-width: 320px) {
