--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -20,6 +20,13 @@
 }
 
 
+@media screen and (max-width: 690px) {
+    .intro{
+        margin: 50px 10px;
+        max-width: 90%;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .intro{
         margin: 50px 10px;
