--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,6 +9,10 @@
     max-width: 100%;
 }
 
+.place__paragraph:nth-child(2){
+    margin-bottom: 0;
+}
+
 @media screen and (max-width:768px) {
     .place__paragraph{
         font-size: 16px;
