--- a/pages/index.css
+++ b/pages/index.css
@@ -1,20 +1,23 @@
 @import url("../vendor/normalize.css");
-@import url("../fonts/font-face.css");
+@import url("../vendor/fonts/font-face.css");
 @import url("../blocks/page/page.css");
+@import url("../blocks/page/__link/page__link.css");
+@import url("../blocks/page/__link/_active/page__link_active.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/header/__lang-links/__lang-links.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
-@import url("../blocks/header/__lang-link/_unstressed/header__lang-link_unstressed.css");
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/lead/__titile/lead__title.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
+@import url("../blocks/lead/__figure/lead__figure.css");
 @import url("../blocks/lead/__image/lead__image.css");
 @import url("../blocks/lead/__caption/lead__caption.css");
 @import url("../blocks/intro/intro.css");
 @import url("../blocks/intro/__title/intro__title.css");
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__list/intro__list.css");
+@import url("../blocks/intro/__list/_bold/intro__list_bold.css");
 @import url("../blocks/photo-grid/photo-grid.css");
 @import url("../blocks/photo-grid/__item/photo-grid__item.css");
 @import url("../blocks/places/places.css");
@@ -30,5 +33,6 @@
 @import url("../blocks/cover/__title/cover__title.css");
 @import url("../blocks/cover/__subtitle/cover__subtitle.css");
 @import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__links/footer__links.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/footer/__link/footer__link.css");
