--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -24,7 +24,8 @@
 
 @media screen and (max-width: 767px) {
     .photo-grid{
-        margin: 64px 14px 0 14px;
+        margin-top: 64px;
+        justify-content: center;
         grid-template-columns: 288px;
         row-gap: 12px;
         grid-template-rows: repeat(12, 1fr);
