--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,10 +8,10 @@
 }
 
 
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 720px) {
     .intro__title{
         font-size: 32px;
         line-height: 35px;
-        max-width: 250px;
+        max-width: calc((250/320)%);
     }
 }
